Changed Dark Template to fix alignment issues

--- a/MainTemplate.css
+++ b/MainTemplate.css
@@ -81,14 +81,14 @@ header {
 	float: left;
 	width: 30%;
 	height:420px;
-	margin: 0px, 0px, 0px, 2%;
+	margin: 0px, 0px, 0px, 0px;
 	padding-bottom:0;
 	border-radius: 5px;
 	border-style: solid;
 	border-color: black;
 	border-width: medium;
 }
-    @media screen and (max-width:900px){ /*previously set for 900 changed to get tablet mobile device capability */
+    @media screen and (max-width:900px){ 
 .sidebar1 {
 	background-color:yellowgreen;
 	color: black;
